--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Festive&family=Pacifico&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Festive&family=Pacifico&display=swap');
 h1,
 p {
   font-family: Lato;
@@ -45,6 +45,7 @@ nav {
   display: block;
   margin-top: 16px;
   margin-left: 8px;
+  font-family: 'Bree Serif', serif;
 }
 
 .dueño {
@@ -62,6 +63,7 @@ nav {
   text-align: left;
   margin-left: 10px;
   margin-top: 5px;
+  font-family: 'Bree Serif', serif;
 }
 
 .img {
